force-app/main/default/objects/Disposition_Priority__mdt/Disposition_Priority__mdt.object-meta.xml
<CustomObject>
    <label>Disposition Priority</label>
    <pluralLabel>Disposition Priorities</pluralLabel>
</CustomObject>