force-app/main/default/objects/Disposition_Priority__mdt/fields/Is_Connected__c.field-meta.xml
<CustomField>
    <fullName>Is_Connected__c</fullName>
    <label>Is Connected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>