force-app/main/default/objects/Disposition_Priority__mdt/fields/L1__c.field-meta.xml
<CustomField>
    <fullName>L1__c</fullName>
    <label>L1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>