force-app/main/default/objects/Disposition_Priority__mdt/fields/L2__c.field-meta.xml
<CustomField>
    <fullName>L2__c</fullName>
    <label>L2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>