force-app/main/default/objects/Disposition_Priority__mdt/fields/L3__c.field-meta.xml
<CustomField>
    <fullName>L3__c</fullName>
    <label>L3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>